--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8082
   servlet:
     context-path: /api
 
@@ -10,12 +10,16 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/carShop?createDatabaseIfNotExist=true
-    driverClassName: com.mysql.cj.jdbc.Driver
-    username: root
-    password: 1234
+    url: jdbc:h2:mem:carShop
+    driverClassName: org.h2.Driver
+    username: sa
+    password: password
   liquibase:
     enabled: true
     change-log: classpath:db/changelog/changelog-master.xml
   jpa:
     show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
