--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
 			<version>2.3.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
