--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:h2:mem:carShop
+    url: jdbc:h2:file:./src/main/resources/data/carShop;AUTO_SERVER=TRUE
     driverClassName: org.h2.Driver
     username: sa
     password: password
@@ -19,9 +19,12 @@ spring:
     change-log: classpath:db/changelog/changelog-master.xml
   jpa:
     show-sql: true
+    hibernate:
+      ddl-auto: create-drop
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
+        ddl-auto: create-drop
   h2:
     console:
       enabled: true
