--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
             <version>1.4.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.kaczmarzyk</groupId>
+            <artifactId>specification-arg-resolver</artifactId>
+            <version>2.6.2</version>
+        </dependency>
     </dependencies>
 
     <build>
